# tink-cc-std

./: .bazelrc  MODULE.bazel  WORKSPACE  cifuzz.yaml  tink_cc_deps.bzl
examples/hybrid_encryption/: BUILD.bazel  hybrid_cli.cc
examples/mac/: BUILD.bazel  mac_cli.cc
tink/absl/functional/: BUILD.bazel  any_invocable.h  any_invocable_test.cc  bind_front.h  bind_front_test.cc  function_ref.h  function_ref_test.cc  function_type_benchmark.cc
tink/absl/functional/internal/: any_invocable.h  front_binder.h  function_ref.h
tink/absl/hash/: BUILD.bazel  hash.h  hash_benchmark.cc  hash_instantiated_test.cc  hash_test.cc  hash_testing.h
tink/absl/hash/internal/: city.cc  city.h  city_test.cc  hash.cc  hash.h  hash_test.h  low_level_hash.cc  low_level_hash.h  low_level_hash_test.cc  print_hash_of.cc  spy_hash_state.h
tink/absl/log/: BUILD.bazel  absl_check.h  absl_check_test.cc  absl_log.h  absl_log_basic_test.cc  check.h  check_test.cc  check_test_impl.inc  die_if_null.cc  die_if_null.h  die_if_null_test.cc  flags.cc  flags.h  flags_test.cc  globals.cc  globals.h  globals_test.cc  initialize.cc  initialize.h  log.h  log_basic_test.cc  log_basic_test_impl.inc  log_benchmark.cc  log_entry.cc  log_entry.h  log_entry_test.cc  log_format_test.cc  log_macro_hygiene_test.cc  log_modifier_methods_test.cc  log_sink.cc  log_sink.h  log_sink_registry.h  log_sink_test.cc  log_streamer.h  log_streamer_test.cc  scoped_mock_log.cc  scoped_mock_log.h  scoped_mock_log_test.cc  stripping_test.cc  structured.h  (+1 more)
tink/absl/log/internal/: BUILD.bazel  append_truncated.h  check_impl.h  check_op.cc  check_op.h  conditions.cc  conditions.h  config.h  flags.h  globals.cc  globals.h  log_format.cc  log_format.h  log_impl.h  log_message.cc  log_message.h  log_sink_set.cc  log_sink_set.h  nullguard.cc  nullguard.h  nullstream.h  proto.cc  proto.h  stderr_log_sink_test.cc  strip.h  structured.h  test_actions.cc  test_actions.h  test_helpers.cc  test_helpers.h  test_matchers.cc  test_matchers.h  voidify.h
tink/absl/random/: BUILD.bazel  benchmarks.cc  bernoulli_distribution.h  bernoulli_distribution_test.cc  beta_distribution.h  beta_distribution_test.cc  bit_gen_ref.h  bit_gen_ref_test.cc  discrete_distribution.cc  discrete_distribution.h  discrete_distribution_test.cc  distributions.h  distributions_test.cc  examples_test.cc  exponential_distribution.h  exponential_distribution_test.cc  gaussian_distribution.cc  gaussian_distribution.h  gaussian_distribution_test.cc  generators_test.cc  log_uniform_int_distribution.h  log_uniform_int_distribution_test.cc  mock_distributions.h  mock_distributions_test.cc  mocking_bit_gen.h  mocking_bit_gen_test.cc  poisson_distribution.h  poisson_distribution_test.cc  random.h  seed_gen_exception.cc  seed_gen_exception.h  seed_sequences.cc  seed_sequences.h  seed_sequences_test.cc  uniform_int_distribution.h  uniform_int_distribution_test.cc  uniform_real_distribution.h  uniform_real_distribution_test.cc  zipf_distribution.h  zipf_distribution_test.cc
tink/absl/random/internal/: BUILD.bazel  chi_square.cc  chi_square.h  chi_square_test.cc  distribution_caller.h  distribution_test_util.cc  distribution_test_util.h  distribution_test_util_test.cc  explicit_seed_seq.h  explicit_seed_seq_test.cc  fast_uniform_bits.h  fast_uniform_bits_test.cc  fastmath.h  fastmath_test.cc  gaussian_distribution_gentables.cc  generate_real.h  generate_real_test.cc  iostream_state_saver.h  iostream_state_saver_test.cc  mock_helpers.h  mock_overload_set.h  nanobenchmark.cc  nanobenchmark.h  nanobenchmark_test.cc  nonsecure_base.h  nonsecure_base_test.cc  pcg_engine.h  pcg_engine_test.cc  pool_urbg.cc  pool_urbg.h  pool_urbg_test.cc  randen.cc  randen.h  randen_benchmarks.cc  randen_detect.cc  randen_detect.h  randen_engine.h  randen_engine_test.cc  randen_hwaes.cc  randen_hwaes.h  (+19 more)
tink/absl/status/: BUILD.bazel  status.cc  status.h  status_payload_printer.cc  status_payload_printer.h  status_test.cc  statusor.cc  statusor.h  statusor_test.cc
tink/absl/status/internal/: status_internal.h  statusor_internal.h
tink/absl/strings/: BUILD.bazel  ascii.cc  ascii.h  ascii_benchmark.cc  ascii_test.cc  atod_manual_test.cc  char_formatting_test.cc  charconv.cc  charconv.h  charconv_benchmark.cc  charconv_test.cc  cord.cc  cord.h  cord_analysis.cc  cord_analysis.h  cord_buffer.cc  cord_buffer.h  cord_buffer_test.cc  cord_ring_reader_test.cc  cord_ring_test.cc  cord_test.cc  cord_test_helpers.h  cordz_test.cc  cordz_test_helpers.h  escaping.cc  escaping.h  escaping_benchmark.cc  escaping_test.cc  match.cc  match.h  match_test.cc  numbers.cc  numbers.h  numbers_benchmark.cc  numbers_test.cc  str_cat.cc  str_cat.h  str_cat_benchmark.cc  str_cat_test.cc  str_format.h  (+21 more)
tink/absl/strings/internal/: char_map.h  char_map_benchmark.cc  char_map_test.cc  charconv_bigint.cc  charconv_bigint.h  charconv_bigint_test.cc  charconv_parse.cc  charconv_parse.h  charconv_parse_test.cc  cord_data_edge.h  cord_data_edge_test.cc  cord_internal.cc  cord_internal.h  cord_rep_btree.cc  cord_rep_btree.h  cord_rep_btree_navigator.cc  cord_rep_btree_navigator.h  cord_rep_btree_navigator_test.cc  cord_rep_btree_reader.cc  cord_rep_btree_reader.h  cord_rep_btree_reader_test.cc  cord_rep_btree_test.cc  cord_rep_consume.cc  cord_rep_consume.h  cord_rep_crc.cc  cord_rep_crc.h  cord_rep_crc_test.cc  cord_rep_flat.h  cord_rep_ring.cc  cord_rep_ring.h  cord_rep_ring_reader.h  cord_rep_test_util.h  cordz_functions.cc  cordz_functions.h  cordz_functions_test.cc  cordz_handle.cc  cordz_handle.h  cordz_handle_test.cc  cordz_info.cc  cordz_info.h  (+41 more)
tink/absl/types/: BUILD.bazel  any.h  any_exception_safety_test.cc  any_test.cc  bad_any_cast.cc  bad_any_cast.h  bad_optional_access.cc  bad_optional_access.h  bad_variant_access.cc  bad_variant_access.h  compare.h  compare_test.cc  optional.h  optional_exception_safety_test.cc  optional_test.cc  span.h  span_test.cc  variant.h  variant_benchmark.cc  variant_exception_safety_test.cc  variant_test.cc
tink/absl/types/internal/: conformance_aliases.h  conformance_archetype.h  conformance_profile.h  (+6 more)
(+1163 files in other folders)
