package(default_visibility = ["//visibility:public"])

licenses(["notice"])

filegroup(
    name = "mac_test_keyset",
    srcs = ["mac_test_keyset.json"],
)

cc_binary(
    name = "mac_cli",
    srcs = ["mac_cli.cc"],
    deps = [
        "//util",
        "//tink/absl/flags:flag",
        "//tink/absl/flags:parse",
        "//tink/absl/log:check",
        "//tink/absl/strings",
        "@tink_cc//tink:cleartext_keyset_handle",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink:mac",
        "@tink_cc//tink/mac:mac_config",
        "@tink_cc//tink/util:status",
    ],
)

sh_test(
    name = "mac_cli_test",
    size = "small",
    srcs = ["mac_cli_test.sh"],
    args = [
        "$(rootpath :mac_cli)",
        "$(rootpath :mac_test_keyset)",
    ],
    data = [
        ":mac_cli",
        ":mac_test_keyset",
    ],
)
